# wimpy_acquire

./: .gitignore  CMakeLists.txt  no_setup.cfg  no_setup.py  note  package.xml
config/: config.yaml
launch/: wimpy_all.py  wimpy_ign.py
scripts/: run_acquire.py
scripts/compare/: test_model.py
scripts/compare/ppew/: events.out.tfevents.1673272933.blanker.109738.0  events.out.tfevents.1673953066.blanker.207040.0  events.out.tfevents.1673953081.blanker.207081.0
scripts/compare/ppew/w_test_test_label_w/: events.out.tfevents.1673272936.blanker.109738.5  events.out.tfevents.1673953068.blanker.207040.5  events.out.tfevents.1673953084.blanker.207081.5
scripts/compare/ppew/w_test_test_out_w/: events.out.tfevents.1673272936.blanker.109738.6  (+2 more)
scripts/others/: HH_las_tag.py  W_test_label_w.csv  W_test_out_w.csv  plot_losses.py  plot_losses_fine.py  plot_test_MSE.py  plot_test_MSE_fine.py  plot_test_fine.py  prepare_data_fine_split.py  run-loss_train-tag-loss.csv  run-loss_valid-tag-loss.csv  x_test_label_x.csv  x_test_out_x.csv  y_test_label_y.csv  y_test_out_y.csv
scripts/others/test0/: loss_train.csv  loss_valid.csv  w_test_test_label_w.csv  w_test_test_out_w.csv  x_test_test_label_x.csv  x_test_test_out_x.csv  y_test_test_label_y.csv  y_test_test_out_y.csv
scripts/others/test3/: loss_train.csv  loss_valid.csv  w_test_test_label_w.csv  w_test_test_out_w.csv  x_test_test_label_x.csv  x_test_test_out_x.csv  y_test_test_label_y.csv  y_test_test_out_y.csv
urdf/: system.urdf.xacro
urdf/sweepee/: sweepee.xacro
worlds/: empty.sdf  ign.sdf  world.world
(+12 files in other folders)
